add: misc changes

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               data-aos-once="true"
             >
               <div class="content">
-                <h1>CCA iGEM's Science Camp</h1>
+                <h1>CCA iGEM Science Camp</h1>
                 <p>
                   Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for summer
                   2022!
@@ -383,7 +383,7 @@
           <div class="row justify-content-center" id="table-price-value" data-pricing-dynamic data-value-active="monthly">
             <div class="col-md-12 text-center">
               <!-- toggle-btn start -->
-              <div class="toggle-btn d-inline-block justify-content-center">
+              <!-- <div class="toggle-btn d-inline-block justify-content-center">
                 <a
                   class="btn-toggle btn-toggle-2 active-white d-flex price-deck-trigger"
                   data-pricing-trigger
@@ -392,7 +392,7 @@
                 >
                   <span class="round"></span>
                 </a>
-              </div>
+              </div> -->
               <!-- toggle-btn end -->
             </div>
             <div class="col-md-12 col-sm-8 l-14-pricing-table row no-gutters">
@@ -406,16 +406,16 @@
                 >
                   <!-- price-top start -->
                   <div class="price-top justify-content-between mb-2">
-                    <span>Basic</span>
+                    <span>Regular</span>
                   </div>
                   <!-- price-top end -->
                   <!-- main-price start -->
                   <div class="main-price pb-8 border-bottom">
                     <div class="price mt-3 mb-3 position-relative">
                       <span class="d-inline-block mb-0 dynamic-value">$</span>
-                      <h2 class="d-inline-block mb-0 dynamic-value" data-active="15" data-monthly="19" data-yearly="199"></h2>
+                      <h2 class="d-inline-block mb-0 dynamic-value" data-active="15" data-monthly="400" data-yearly="425"></h2>
                     </div>
-                    <span class="dynamic-value" data-active="per month" data-monthly="Per month" data-yearly="per year"></span>
+                    <span class="dynamic-value" data-active="per month" data-monthly="no lunch" data-yearly="with lunch"></span>
                   </div>
                   <!-- main-price end -->
                   <!-- price-body start -->
@@ -446,16 +446,16 @@
                 >
                   <!-- price-top start -->
                   <div class="price-top justify-content-between mb-2">
-                    <span>Pro</span>
+                    <span>Early Bird</span>
                   </div>
                   <!-- price-top end -->
                   <!-- main-price start -->
                   <div class="main-price pb-8 border-bottom">
                     <div class="price mt-3 mb-3 position-relative">
                       <span class="d-inline-block mb-0 dynamic-value">$</span>
-                      <h2 class="d-inline-block mb-0 dynamic-value" data-active="15" data-monthly="29" data-yearly="299"></h2>
+                      <h2 class="d-inline-block mb-0 dynamic-value" data-active="15" data-monthly="350" data-yearly="375"></h2>
                     </div>
-                    <span class="dynamic-value" data-active="per month" data-monthly="per month" data-yearly="per year"></span>
+                    <span class="dynamic-value" data-active="per month" data-monthly="no lunch" data-yearly="with lunch"></span>
                   </div>
                   <!-- main-price end -->
                   <!-- price-body start -->
