--- a/index.html
+++ b/index.html
@@ -66,10 +66,7 @@
             <!-- Brand Logo-->
             <div class="brand-logo">
               <a href="#">
-                <!-- light version logo (logo must be black)-->
                 <img src="image/logo/logo-black-1.png" alt="" class="light-version-logo" />
-                <!-- Dark version logo (logo must be White)-->
-                <img src="image/logo/logo-white.png" alt="" class="dark-version-logo" />
               </a>
             </div>
             <div class="menu-block-wrapper">
@@ -372,11 +369,8 @@
               data-aos-once="true"
             >
               <div class="section-heading-8">
-                <h2>Simple pricing</h2>
-                <p>
-                  Below are the various amounts of money that you are allowed to donate monthly or yearly to Melinda Chang
-                  (***EXTREMELY POOR)
-                </p>
+                <h2>Pricing</h2>
+                <p>A $100 advance deposit is required to reserve your seat. We will contact you with full payment information before the camp begins.</p>
               </div>
             </div>
           </div>
