fix: file reorder

--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
 
     <!-- Bootstrap , fonts & icons  -->
     <link rel="stylesheet" href="./css/bootstrap.css" />
-    <link rel="stylesheet" href="./fonts/icon-font/css/style.css" />
-    <link rel="stylesheet" href="./fonts/typography-font/typo.css" />
-    <link rel="stylesheet" href="./fonts/fontawesome-5/css/all.css" />
+    <link rel="stylesheet" href="./fonts/typo.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@400;500;700;900&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800;900&display=swap" rel="stylesheet" />
