--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link-item">Blog</a>
+                    <a href="#" class="nav-link-item">About</a>
                   </li>
                   <li class="nav-item">
                     <a href="https://uxtheme.net/product-support/" class="nav-link-item">Support</a>
@@ -414,11 +414,11 @@
                   <!-- price-body start -->
                   <div class="price-body">
                     <ul class="pricing-list with-check-icon list-unstyled">
-                      <li>Unlimited Blocks</li>
-                      <li>5GB Clould Storages</li>
-                      <li>Custom Domain Names</li>
                       <li>
-                        <del class="text-gray">Unlimited Emails</del>
+                        <del class="text-gray">Discounted price</del>
+                      </li>
+                      <li>
+                        <del class="text-gray">Lunch provided daily</del>
                       </li>
                     </ul>
                   </div>
@@ -454,10 +454,12 @@
                   <!-- price-body start -->
                   <div class="price-body">
                     <ul class="pricing-list with-check-icon list-unstyled">
-                      <li>Unlimited Blocks</li>
-                      <li>5GB Clould Storages</li>
-                      <li>Custom Domain Names</li>
-                      <li>Unlimited Emails</li>
+                      <li>
+                        Discounted price (eligible until May 10)
+                      </li>
+                      <li>
+                        <del class="text-gray">Lunch provided daily</del>
+                      </li>
                     </ul>
                   </div>
                   <div class="price-btn price-btn-bro">
@@ -477,25 +479,27 @@
                 >
                   <!-- price-top start -->
                   <div class="price-top justify-content-between mb-2">
-                    <span>Smart</span>
+                    <span>Regular</span>
                   </div>
                   <!-- price-top end -->
                   <!-- main-price start -->
                   <div class="main-price pb-8 border-bottom">
                     <div class="price mt-3 mb-3 position-relative">
                       <span class="d-inline-block mb-0 dynamic-value">$</span>
-                      <h2 class="d-inline-block mb-0 dynamic-value" data-active="15" data-monthly="49" data-yearly="499"></h2>
+                      <h2 class="d-inline-block mb-0 dynamic-value" data-active="15" data-monthly="425" data-yearly="499"></h2>
                     </div>
-                    <span class="dynamic-value" data-active="per month" data-monthly="per month" data-yearly="per year"></span>
+                    <span class="dynamic-value" data-active="per month" data-monthly="With Lunch" data-yearly="per year"></span>
                   </div>
                   <!-- main-price end -->
                   <!-- price-body start -->
                   <div class="price-body">
                     <ul class="pricing-list with-check-icon list-unstyled">
-                      <li>Unlimited Blocks</li>
-                      <li>5GB Clould Storages</li>
-                      <li>Custom Domain Names</li>
-                      <li>Unlimited Emails</li>
+                      <li>
+                        <del class="text-gray">Discounted price</del>
+                      </li>
+                      <li>
+                        Lunch provided daily
+                      </li>
                     </ul>
                   </div>
                   <div class="price-btn">
@@ -515,25 +519,27 @@
                 >
                   <!-- price-top start -->
                   <div class="price-top justify-content-between mb-2">
-                    <span class="font-size-1 letter-spacing-np51 text-dovegray line-height-1p66 font-weight-bold">Exclusive</span>
+                    <span class="font-size-1 letter-spacing-np51 text-dovegray line-height-1p66 font-weight-bold">Early Bird</span>
                   </div>
                   <!-- price-top end -->
                   <!-- main-price start -->
                   <div class="main-price pb-8 border-bottom">
                     <div class="price mt-3 mb-3 position-relative">
                       <span class="d-inline-block mb-0 dynamic-value">$</span>
-                      <h2 class="d-inline-block mb-0 dynamic-value" data-active="15" data-monthly="89" data-yearly="999"></h2>
+                      <h2 class="d-inline-block mb-0 dynamic-value" data-active="15" data-monthly="375" data-yearly="999"></h2>
                     </div>
-                    <span class="dynamic-value" data-active="per month" data-monthly="per month" data-yearly="per year"></span>
+                    <span class="dynamic-value" data-active="per month" data-monthly="with lunch" data-yearly="per year"></span>
                   </div>
                   <!-- main-price end -->
                   <!-- price-body start -->
                   <div class="price-body">
                     <ul class="pricing-list with-check-icon list-unstyled">
-                      <li>Unlimited Blocks</li>
-                      <li>5GB Clould Storages</li>
-                      <li>Custom Domain Names</li>
-                      <li>Unlimited Emails</li>
+                      <li>
+                        Discounted price (eligible untli May 10)
+                      </li>
+                      <li>
+                        Lunch provided daily
+                      </li>
                     </ul>
                   </div>
                   <div class="price-btn">
