--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for summer
                   2022!
                 </p>
-                <a href="#" class="btn focus-reset">Register Now</a>
+                <a href="https://discord.com/channels/@me/743354590283431977/960614437671272588" class="btn focus-reset">Register Now</a>
               </div>
             </div>
             <div class="col-xl-7 col-lg-5 col-md-8" data-aos="fade-left" data-aos-duration="800" data-aos-once="true">
