--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               </nav>
             </div>
             <div class="header-btn header-btn-l-14 ms-auto d-none d-xs-inline-flex">
-              <a target="_blank" class="btn btn trail-btn focus-reset" href="https://finestdevs.com/shade/">Get Started</a>
+              <a target="_blank" class="btn btn trail-btn focus-reset" href="https://forms.gle/pbMH1X13CzDQu6dS6">Get Started</a>
             </div>
             <!-- mobile menu trigger -->
             <div class="mobile-menu-trigger">
@@ -423,7 +423,7 @@
                     </ul>
                   </div>
                   <div class="price-btn">
-                    <a class="btn focus-reset" href="#">Get started now</a>
+                    <a class="btn focus-reset" href="https://forms.gle/pbMH1X13CzDQu6dS6">Get started now</a>
                   </div>
                   <!-- price-btn end -->
                 </div>
@@ -463,7 +463,7 @@
                     </ul>
                   </div>
                   <div class="price-btn price-btn-bro">
-                    <a class="btn" href="#">Get started now</a>
+                    <a class="btn" href="https://forms.gle/pbMH1X13CzDQu6dS6">Get started now</a>
                   </div>
                   <!-- price-btn end -->
                 </div>
@@ -503,7 +503,7 @@
                     </ul>
                   </div>
                   <div class="price-btn">
-                    <a class="btn" href="#">Get started now</a>
+                    <a class="btn" href="https://forms.gle/pbMH1X13CzDQu6dS6">Get started now</a>
                   </div>
                   <!-- price-btn end -->
                 </div>
@@ -543,7 +543,7 @@
                     </ul>
                   </div>
                   <div class="price-btn">
-                    <a class="btn" href="#">Get started now</a>
+                    <a class="btn" href="https://forms.gle/pbMH1X13CzDQu6dS6">Get started now</a>
                   </div>
                   <!-- price-btn end -->
                 </div>
@@ -564,7 +564,7 @@
               </div>
             </div>
             <div class="col-lg-3 text-lg-end text-center">
-              <a class="btn" href="#">Sign Up Now</a>
+              <a class="btn" href="https://forms.gle/pbMH1X13CzDQu6dS6">Sign Up Now</a>
             </div>
           </div>
         </div>
