--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for summer
                   2022!
                 </p>
-                <a href="https://discord.com/channels/@me/743354590283431977/960614437671272588" class="btn focus-reset">Register Now</a>
+                <a href="https://forms.gle/pbMH1X13CzDQu6dS6" class="btn focus-reset">Register Now</a>
               </div>
             </div>
             <div class="col-xl-7 col-lg-5 col-md-8" data-aos="fade-left" data-aos-duration="800" data-aos-once="true">
@@ -225,7 +225,7 @@
                   Learn about innovative STEM topics in a fun and engaging classroom environment. We offer many opportunities for
                   students to discuss and implement new ideas in various scientific fields.
                 </p>
-                <a href="#" class="btn focus-reset">
+                <a href="https://forms.gle/pbMH1X13CzDQu6dS6" class="btn focus-reset">
                   Get Started Now
                   <i class="fas fa-angle-right"></i>
                 </a>
@@ -265,7 +265,7 @@
                   Advanced, in-person biology and chemistry labs inspired by high school classes. Learn valuable skills for
                   internships, research, and future STEM classes.
                 </p>
-                <a href="#" class="btn focus-reset">
+                <a href="https://forms.gle/pbMH1X13CzDQu6dS6" class="btn focus-reset">
                   Get Started Now
                   <i class="fas fa-angle-right"></i>
                 </a>
