add: camp info, about us

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>CCA iGEM Summer Camp | Join Today!</title>
     <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon" />
     <!-- Primary Meta Tags -->
-    <title>CCA iGEM Summer Camp | Join Today!</title>
     <meta name="title" content="CCA iGEM Summer Camp | Join Today!" />
     <meta
       name="description"
@@ -35,9 +34,9 @@
     <meta property="twitter:image" content="https://i.imgur.com/rpTzzTe.png" />
 
     <!-- Bootstrap , fonts & icons  -->
-    <link rel="stylesheet" href="./css/bootstrap.css" />
-    <link rel="stylesheet" href="./fonts/typo.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.css" />
+    <link rel="stylesheet" href="/fonts/typo.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@400;500;700;900&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800;900&display=swap" rel="stylesheet" />
@@ -47,7 +46,7 @@
     <!-- Plugin'stylesheets  -->
     <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
 
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
 
   <body data-theme-mode-panel-active data-theme="light" style="font-family: 'Mazzard H'">
@@ -55,7 +54,7 @@
       <!-- Site Header -->
       <div id="loading">
         <div class="preloader">
-          <img src="./image/preloader.gif" alt="preloader" />
+          <img src="/image/preloader.gif" alt="preloader" />
         </div>
       </div>
       <!--Site Header Area -->
@@ -64,8 +63,8 @@
           <nav class="navbar site-navbar">
             <!-- Brand Logo-->
             <div class="brand-logo">
-              <a href="#">
-                <img src="image/logo/logo-black-1.png" alt="" class="light-version-logo" />
+              <a href="/">
+                <img src="/image/logo/logo-black-1.png" class="light-version-logo" />
               </a>
             </div>
             <div class="menu-block-wrapper">
@@ -97,7 +96,10 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link-item">About</a>
+                    <a href="/views/camp-info.html" class="nav-link-item">Camp Information</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="/views/about.html" class="nav-link-item">About Us</a>
                   </li>
                   <li class="nav-item">
                     <a href="https://uxtheme.net/product-support/" class="nav-link-item">Support</a>
@@ -128,7 +130,7 @@
               data-aos-once="true"
             >
               <div class="content">
-                <h1>CCA iGEM Science Camp</h1>
+                <h1>CCA iGEM STEM Camp</h1>
                 <p>
                   Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for summer
                   2022!
@@ -138,76 +140,13 @@
             </div>
             <div class="col-xl-7 col-lg-5 col-md-8" data-aos="fade-left" data-aos-duration="800" data-aos-once="true">
               <div class="banner-image-l-14">
-                <img src="./image/l4/hero-img-1.png" alt="" class="w-100 mt-xl-n10" />
+                <img src="/image/l4/hero-img-1.png" alt="" class="w-100 mt-xl-n10" />
               </div>
             </div>
           </div>
         </div>
         <div class="bg-shape-14"></div>
       </div>
-      <!-- Brand-area -->
-      <!-- <div class="brand-area-l-14">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-12 text-center">
-              <h4>The #1 Landing Page Platform for 15,000+ Brands</h4>
-            </div>
-          </div>
-          <div class="row img-grayscale">
-            <div class="col-lg-12">
-              <div
-                class="brand-area-l-14-items d-flex justify-content-center justify-content-xl-between align-items-center flex-wrap"
-              >
-                <div
-                  class="single-brand"
-                  data-aos="fade-right"
-                  data-aos-duration="500"
-                  data-aos-once="true"
-                >
-                  <img src="image/l4/brand-logo.svg" alt="" />
-                </div>
-                <div
-                  class="single-brand"
-                  data-aos="fade-right"
-                  data-aos-duration="700"
-                  data-aos-once="true"
-                >
-                  <img src="image/l4/brand-logo-1.svg" alt="" />
-                </div>
-                <div
-                  class="single-brand"
-                  data-aos="fade-right"
-                  data-aos-duration="900"
-                  data-aos-once="true"
-                >
-                  <img src="image/l4/brand-logo-2.svg" alt="" />
-                </div>
-                <div
-                  class="single-brand"
-                  data-aos="fade-right"
-                  data-aos-duration="1000"
-                  data-aos-once="true"
-                >
-                  <img src="image/l4/brand-logo-3.svg" alt="" />
-                </div>
-                <div
-                  class="single-brand"
-                  data-aos="fade-right"
-                  data-aos-duration="1200"
-                  data-aos-once="true"
-                >
-                  <img src="image/l4/brand-logo-4.svg" alt="" />
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="brand-aarea-border-l14"></div>
-            </div>
-          </div>
-        </div>
-      </div> -->
       <div class="py-4"></div>
       <!-- Content-Area-1 -->
       <div class="content-area-l-14-1 position-relative">
@@ -222,7 +161,7 @@
               <div class="h-100 section-heading-8 content text-lg-start text-center">
                 <h2>Advanced curriculum</h2>
                 <p>
-                  Learn about innovative STEM topics in a fun and engaging classroom environment. We offer many opportunities for
+                  Learn about innovative STEM topics in a fun, engaging classroom environment. We offer many opportunities for
                   students to discuss and implement new ideas in various scientific fields.
                 </p>
                 <a href="#" class="btn focus-reset">
@@ -274,89 +213,6 @@
           </div>
         </div>
       </div>
-      <!-- Feature Area -->
-      <!-- div class="features-area-l-14">
-        <div class="container bg-shape-img-2 position-relative">
-          <div class="row features-area-l-14 justify-content-center mx-0">
-            <div
-              class="col-lg-6 col-md-8 col-sm-10 px-lg-6"
-              data-aos="fade-right"
-              data-aos-duration="800"
-              data-aos-once="true"
-            >
-              <div class="content-area d-flex">
-                <div class="circle-85 hover-icon">
-                  <img src="./image/l4/f-icon-1.png" alt="" />
-                </div>
-                <div class="content-body pl-sm-14 pl-5">
-                  <h5>Advanced curriculum</h5>
-                  <p class="mb-0">
-                    Learn about innovative STEM topics in a fun and engaging classroom environment. Students will have opportunities to discuss and implement new ideas with like-minded peers.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div
-              class="col-lg-6 col-md-8 col-sm-10"
-              data-aos="fade-left"
-              data-aos-duration="800"
-              data-aos-once="true"
-            >
-              <div class="content-area d-flex">
-                <div class="circle-85 hover-icon">
-                  <img src="./image/l4/f-icon-2.png" alt="" />
-                </div>
-                <div class="content-body">
-                  <h5>Easy to Use</h5>
-                  <p class="mb-0">
-                    Event is not like most tech conferences. We want our
-                    presentations to engage the audience, and inspire new ideas.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div
-              class="col-lg-6 col-md-8 col-sm-10"
-              data-aos="fade-right"
-              data-aos-duration="800"
-              data-aos-once="true"
-            >
-              <div class="content-area d-flex">
-                <div class="circle-85 hover-icon">
-                  <img src="./image/l4/f-icon-3.png" alt="" />
-                </div>
-                <div class="content-body">
-                  <h5>Easy to Use</h5>
-                  <p class="mb-0">
-                    Event is not like most tech conferences. We want our
-                    presentations to engage the audience.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div
-              class="col-lg-6 col-md-8 col-sm-10"
-              data-aos="fade-left"
-              data-aos-duration="800"
-              data-aos-once="true"
-            >
-              <div class="content-area d-flex">
-                <div class="circle-85 hover-icon">
-                  <img src="./image/l4/f-icon-4.png" alt="" />
-                </div>
-                <div class="content-body">
-                  <h5>Easy to Use</h5>
-                  <p class="mb-0">
-                    Event is not like most tech conferences. We want our
-                    presentations to engage the audience, spark discussion and
-                    inspire new ideas.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div-->
       <!-- Pricing-area section -->
       <div class="pricing-area-l14 position-relative overflow-hidden z-index-1">
         <div class="container">
@@ -369,7 +225,10 @@
             >
               <div class="section-heading-8">
                 <h2>Pricing</h2>
-                <p>A $100 advance deposit is required to reserve your seat. We will contact you with full payment information before the camp begins.</p>
+                <p>
+                  A $100 advance deposit is required to reserve your seat. We will contact you with full payment information
+                  before the camp begins.
+                </p>
               </div>
             </div>
           </div>
@@ -454,9 +313,7 @@
                   <!-- price-body start -->
                   <div class="price-body">
                     <ul class="pricing-list with-check-icon list-unstyled">
-                      <li>
-                        Discounted price (eligible until May 10)
-                      </li>
+                      <li>Discounted price (eligible until May 10)</li>
                       <li>
                         <del class="text-gray">Lunch provided daily</del>
                       </li>
@@ -497,9 +354,7 @@
                       <li>
                         <del class="text-gray">Discounted price</del>
                       </li>
-                      <li>
-                        Lunch provided daily
-                      </li>
+                      <li>Lunch provided daily</li>
                     </ul>
                   </div>
                   <div class="price-btn">
@@ -519,7 +374,9 @@
                 >
                   <!-- price-top start -->
                   <div class="price-top justify-content-between mb-2">
-                    <span class="font-size-1 letter-spacing-np51 text-dovegray line-height-1p66 font-weight-bold">Early Bird</span>
+                    <span class="font-size-1 letter-spacing-np51 text-dovegray line-height-1p66 font-weight-bold"
+                      >Early Bird</span
+                    >
                   </div>
                   <!-- price-top end -->
                   <!-- main-price start -->
@@ -534,12 +391,8 @@
                   <!-- price-body start -->
                   <div class="price-body">
                     <ul class="pricing-list with-check-icon list-unstyled">
-                      <li>
-                        Discounted price (eligible untli May 10)
-                      </li>
-                      <li>
-                        Lunch provided daily
-                      </li>
+                      <li>Discounted price (eligible untli May 10)</li>
+                      <li>Lunch provided daily</li>
                     </ul>
                   </div>
                   <div class="price-btn">
@@ -627,7 +480,7 @@
         </div>
       </footer>
     </div>
-    <script src="./plugins/menu/menu.js" type="module"></script>
-    <script src="./js/index.js" type="module"></script>
+    <script src="/plugins/menu/menu.js" type="module"></script>
+    <script src="/js/index.js" type="module"></script>
   </body>
 </html>
