conv: abt us pg

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                   <div class="price-body">
                     <ul class="pricing-list with-check-icon list-unstyled">
                       <li>
-                        <del class="text-gray">Discounted price</del>
+                        <del class="text-gray">Discount</del>
                       </li>
                       <li>
                         <del class="text-gray">Lunch provided daily</del>
@@ -310,7 +310,7 @@
                   <!-- price-body start -->
                   <div class="price-body">
                     <ul class="pricing-list with-check-icon list-unstyled">
-                      <li>Discounted price (eligible until May 10)</li>
+                      <li>Discount (eligible until May 10)</li>
                       <li>
                         <del class="text-gray">Lunch provided daily</del>
                       </li>
@@ -349,7 +349,7 @@
                   <div class="price-body">
                     <ul class="pricing-list with-check-icon list-unstyled">
                       <li>
-                        <del class="text-gray">Discounted price</del>
+                        <del class="text-gray">Discount</del>
                       </li>
                       <li>Lunch provided daily</li>
                     </ul>
@@ -388,7 +388,7 @@
                   <!-- price-body start -->
                   <div class="price-body">
                     <ul class="pricing-list with-check-icon list-unstyled">
-                      <li>Discounted price (eligible untli May 10)</li>
+                      <li>Discount (eligible untli May 10)</li>
                       <li>Lunch provided daily</li>
                     </ul>
                   </div>
