--- a/index.html
+++ b/index.html
@@ -225,7 +225,10 @@
             >
               <div class="section-heading-8">
                 <h2>Pricing</h2>
-                <p>A $50 advance deposit is required to reserve your seat. We will contact you with full payment information before the camp begins.</p>
+                <p>
+                  A $50 advance deposit is required to reserve your seat. We will contact you with full payment information before
+                  the camp begins.
+                </p>
               </div>
             </div>
           </div>
@@ -429,18 +432,16 @@
                   <div class="footer-widget widget2">
                     <p>Help menu</p>
                     <ul class="widget-links pl-0 list-unstyled">
-                      <li><a href="">About</a></li>
-                      <li><a href="">Features</a></li>
-                      <li><a href="">Works</a></li>
-                      <li><a href="">Career</a></li>
+                      <li><a href="/views/camp-info.html">Camp Info</a></li>
+                      <li><a href="/views/about.html">About Us</a></li>
+                      <li><a href="#">Support</a></li>
                     </ul>
                   </div>
                 </div>
                 <div class="col-sm-4 col-xs-6">
                   <div class="footer-widget widget3">
                     <ul class="widget-links pl-0 list-unstyled">
-                      <li><a href="">Contact </a></li>
-                      <li><a href="">Help & Support</a></li>
+                      <li><a href="mailto:ccaigem2022@gmail.com">Contact </a></li>
                       <li><a href="">Privacy Policy</a></li>
                       <li><a href="">Terms & Conditions</a></li>
                     </ul>
@@ -448,12 +449,13 @@
                 </div>
                 <div class="col-sm-5 col-xs-6 pl-lg-0">
                   <div class="footer-widget widget4">
-                    <p class="widget-title">Products</p>
+                    <p class="widget-title">General</p>
                     <ul class="widget-links pl-0 list-unstyled">
-                      <li><a href="">Essential Landing Page</a></li>
-                      <li><a href="">Alpha Dashboard Pro</a></li>
-                      <li><a href="">Karnel Admin Dashboard</a></li>
-                      <li><a href="">Gray UI Kit</a></li>
+                      <li><a>&copy; CCA iGEM 2022.</a></li>
+                      <li>
+                        <a href="https://instagram.com/cca.igem" style="padding-right:3px" target="_blank"> <i class="fa-brands fa-instagram"></i></a>
+                        <a href="mailto:ccaigem2022@gmail.com" target="_blank"> <i class="fa-regular fa-envelope"></i> </a>
+                      </li>
                     </ul>
                   </div>
                 </div>
@@ -461,16 +463,18 @@
             </div>
             <div class="col-lg-5 col-md-8 col-sm-11" data-aos="fade-left" data-aos-duration="800" data-aos-once="true">
               <div class="footer-subs-form-l-12">
-                <p>Subscribe to our newsletter</p>
-                <h6>Subscribe to get lastest offers, news and events announcements. No spam in your inbox.</h6>
-                <div class="input-group">
-                  <input type="text" class="form-control" placeholder="Enter your email address" aria-label="" />
-                  <div class="input-group-append">
-                    <button class="btn border-0 focus-reset" type="button">
-                      <i class="icon icon-tail-right text-white"></i>
-                    </button>
+                <p>Join our mailing list</p>
+                <h6>Get the latest updates and announcements about our camp. No spam in your inbox.</h6>
+                <form name="mailing-list" netlify>
+                  <div class="input-group">
+                    <input name="email" type="text" class="form-control" placeholder="Enter your email address" aria-label="" />
+                    <div class="input-group-append">
+                      <button class="btn border-0 focus-reset" type="button">
+                        <i class="fas fa-angle-right text-white"></i>
+                      </button>
+                    </div>
                   </div>
-                </div>
+                </form>
               </div>
             </div>
           </div>
