--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="title" content="CCA iGEM Summer Camp | Join Today!" />
     <meta
       name="description"
-      content="Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for summer 2022!"
+      content="Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for summer 2022! Email ccaigem2022@gmail.com with any questions."
     />
 
     <!-- Open Graph / Facebook -->
