fix: root container

--- a/index.html
+++ b/index.html
@@ -47,6 +47,19 @@
     <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
 
     <link rel="stylesheet" href="/css/main.css" />
+
+    <style>
+      @media (min-width: 1400px) {
+        .container,
+        .container-sm,
+        .container-md,
+        .container-lg,
+        .container-xl,
+        .container-xxl {
+          max-width: 1320px;
+        }
+      }
+    </style>
   </head>
 
   <body data-theme-mode-panel-active data-theme="light" style="font-family: 'Mazzard H'">
@@ -453,7 +466,9 @@
                     <ul class="widget-links pl-0 list-unstyled">
                       <li><a>&copy; CCA iGEM 2022.</a></li>
                       <li>
-                        <a href="https://instagram.com/cca.igem" style="padding-right:3px" target="_blank"> <i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://instagram.com/cca.igem" style="padding-right: 3px" target="_blank">
+                          <i class="fa-brands fa-instagram"></i
+                        ></a>
                         <a href="mailto:ccaigem2022@gmail.com" target="_blank"> <i class="fa-regular fa-envelope"></i> </a>
                       </li>
                     </ul>
