--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               data-aos-once="true"
             >
               <div class="content">
-                <h1>CCA iGEM STEM Camp</h1>
+                <h1>CCA iGEM Science Camp</h1>
                 <p>
                   Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for summer
                   2022!
@@ -484,7 +484,7 @@
                   <div class="input-group">
                     <input name="email" type="text" class="form-control" placeholder="Enter your email address" aria-label="" />
                     <div class="input-group-append">
-                      <button class="btn border-0 focus-reset" type="button">
+                      <button class="btn border-0 focus-reset" type="submit">
                         <i class="fas fa-angle-right text-white"></i>
                       </button>
                     </div>
