add: url rewrites

--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
                     </ul>
                   </li> -->
                   <li class="nav-item">
-                    <a href="/views/camp-info.html" class="nav-link-item">Camp Information</a>
+                    <a href="/camp-info" class="nav-link-item">Camp Information</a>
                   </li>
                   <li class="nav-item">
-                    <a href="/views/about.html" class="nav-link-item">About Us</a>
+                    <a href="/about" class="nav-link-item">About Us</a>
                   </li>
                   <li class="nav-item">
                     <a href="https://uxtheme.net/product-support/" class="nav-link-item">Support</a>
@@ -445,8 +445,8 @@
                   <div class="footer-widget widget2">
                     <p>Help menu</p>
                     <ul class="widget-links pl-0 list-unstyled">
-                      <li><a href="/views/camp-info.html">Camp Info</a></li>
-                      <li><a href="/views/about.html">About Us</a></li>
+                      <li><a href="/camp-info">Camp Info</a></li>
+                      <li><a href="/about">About Us</a></li>
                       <li><a href="#">Support</a></li>
                     </ul>
                   </div>
