--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
                       <li>
                         <del class="text-gray">Lunch provided daily</del>
                       </li>
+                      <li>Interactive curriculum</li>
                     </ul>
                   </div>
                   <div class="price-btn">
@@ -330,6 +331,7 @@
                       <li>
                         <del class="text-gray">Lunch provided daily</del>
                       </li>
+                      <li>Interactive curriculum</li>
                     </ul>
                   </div>
                   <div class="price-btn price-btn-bro">
@@ -368,6 +370,7 @@
                         <del class="text-gray">Discount</del>
                       </li>
                       <li>Lunch provided daily</li>
+                      <li>Interactive curriculum</li>
                     </ul>
                   </div>
                   <div class="price-btn">
@@ -404,8 +407,9 @@
                   <!-- price-body start -->
                   <div class="price-body">
                     <ul class="pricing-list with-check-icon list-unstyled">
-                      <li>Discount (eligible untli May 10)</li>
+                      <li>Discount (eligible until May 10)</li>
                       <li>Lunch provided daily</li>
+                      <li>Interactive curriculum</li>
                     </ul>
                   </div>
                   <div class="price-btn">
